--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
 
 
-        <script src="./src/en/changer.js"></script>
+        <!-- <script src="./src/en/changer.js"></script> -->
 
     </nav>
 
