--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="./src/img/Logo/icono.png">
 
     <link rel="stylesheet" href="./src/styles/main.css">
-
+    <script src="https://kit.fontawesome.com/3fc4ba2de8.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,6 +26,13 @@
 
         <img class="logo" src="./src/img/Logo/logo.png" alt="">
 
+        <section class="movil">
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+        </section>
+
         <section class="opciones">
             <ul>
                 <li><a href="">Inicio</a></li>
@@ -35,8 +42,7 @@
             </ul>
         </section>
 
-
-        <!-- <script src="./src/en/changer.js"></script> -->
+        <script src="app.js"></script>
 
     </nav>
 
