--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <nav class="menu">
 
         <section class="idioma">
-            <span class="es">Español</span>
+            <span class="es">Es</span>
             <input type="checkbox" class="cambiarIdioma">
-            <span class="en">Inglés</span>
+            <span class="en">En</span>
         </section>
 
         <img class="logo" src="./src/img/Logo/logo.png" alt="">
