--- a/src/en/index.html
+++ b/src/en/index.html
@@ -19,9 +19,9 @@
     <nav class="menu">
 
         <section class="idioma">
-            <span class="es">Spanish</span>
-            <input type="checkbox" class="cambiarIdioma" checked>
-            <span class="en">English</span>
+            <span class="es">Es</span>
+            <input type="checkbox" class="cambiarIdioma">
+            <span class="en">En</span>
         </section>
 
         <img class="logo" src="../img/Logo/logo.png" alt="">
