--- a/src/en/index.html
+++ b/src/en/index.html
@@ -19,9 +19,9 @@
     <nav class="menu">
 
         <section class="idioma">
-            <span class="es">Es</span>
+            <img class="es" src="../img/Banderas/espana.png" alt="">
             <input type="checkbox" class="cambiarIdioma">
-            <span class="en">En</span>
+            <img class="es" src="../img/Banderas/reino-unido.png" alt="">
         </section>
 
         <img class="logo" src="../img/Logo/logo.png" alt="">
