--- a/src/en/index.html
+++ b/src/en/index.html
@@ -20,7 +20,7 @@
 
         <section class="idioma">
             <img class="es" src="../img/Banderas/espana.png" alt="">
-            <input type="checkbox" class="cambiarIdioma">
+            <input type="checkbox" class="cambiarIdioma" checked>
             <img class="es" src="../img/Banderas/reino-unido.png" alt="">
         </section>
 
