--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <section class="opciones">
             <ul>
-                <li><a href="">Inicio</a></li>
+                <li><a href="#inicio">Inicio</a></li>
                 <li><a href="">Habilidades</a></li>
                 <li><a href="">Proyectos</a></li>
                 <li><a href="">Contacto</a></li>
@@ -45,6 +45,23 @@
         <script src="app.js"></script>
 
     </nav>
+
+
+    <main>
+        <section id="inicio">
+            <article class="informacion">
+                <h1>Sergio Trujillo</h1>
+                <h3>Programador & Diseñador Web</h3>
+                <article class="social">
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-github"></i></a>
+                </article>
+            </article>
+        </section>
+
+    </main>
+
 
 </body>
 
