--- a/index.html
+++ b/index.html
@@ -46,21 +46,19 @@
 
     </nav>
 
-
-    <main>
-        <section id="inicio">
-            <article class="informacion">
-                <h1>Sergio Trujillo</h1>
-                <h3>Programador & Diseñador Web</h3>
-                <article class="social">
-                    <a href=""><i class="fa-brands fa-twitter"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-github"></i></a>
-                </article>
-            </article>
+    <header id="inicio">
+        <section class="informacion">
+            <h1>Sergio Trujillo</h1>
+            <h3>Programador & Diseñador Web</h3>
+            <section class="social">
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-github"></i></a>
+            </section>
         </section>
+    </header>
 
-    </main>
+
 
 
 </body>
