inicio (Incompleto) en (sin hacer)

--- a/index.html
+++ b/index.html
@@ -46,14 +46,16 @@
 
     </nav>
 
+    <!-- Inicio -->
+
     <header id="inicio">
         <section class="informacion">
             <h1>Sergio Trujillo</h1>
             <h3>Programador & Diseñador Web</h3>
             <section class="social">
-                <a href=""><i class="fa-brands fa-twitter"></i></a>
-                <a href=""><i class="fa-brands fa-instagram"></i></a>
-                <a href=""><i class="fa-brands fa-github"></i></a>
+                <a href="" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                <a href="" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="" target="_blank"><i class="fa-brands fa-github"></i></a>
             </section>
         </section>
     </header>
