inicio (completo) en (completo)

--- a/src/en/index.html
+++ b/src/en/index.html
@@ -47,6 +47,21 @@
 
     </nav>
 
+        <!-- Inicio -->
+
+        <header id="inicio">
+            <section class="informacion">
+                <h1>Sergio Trujillo</h1>
+                <h3>Programmer & Web Designer</h3>
+                <section class="social">
+                    <a href="https://twitter.com/DidelfoTron" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/__serg10__xx/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://github.com/DidelfoUwU" target="_blank"><i class="fa-brands fa-github"></i></a>
+                </section>
+            </section>
+        </header>
+    
+
 </body>
 
 </html>
