--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <h1>Sergio Trujillo</h1>
             <h3>Programador & Diseñador Web</h3>
             <section class="social">
-                <a href="" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                <a href="" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://twitter.com/DidelfoTron" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.instagram.com/__serg10__xx/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://github.com/DidelfoUwU" target="_blank"><i class="fa-brands fa-github"></i></a>
             </section>
         </section>
     </header>
