Habilidades (incompleto) en (no hecho)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section class="opciones">
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
-                <li><a href="">Habilidades</a></li>
+                <li><a href="#habilidades">Habilidades</a></li>
                 <li><a href="">Proyectos</a></li>
                 <li><a href="">Contacto</a></li>
             </ul>
@@ -53,14 +53,37 @@
             <h3>Programador & Diseñador Web</h3>
             <section class="social">
                 <a href="https://twitter.com/DidelfoTron" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://www.instagram.com/__serg10__xx/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/__serg10__xx/" target="_blank"><i
+                        class="fa-brands fa-instagram"></i></a>
                 <a href="https://github.com/DidelfoUwU" target="_blank"><i class="fa-brands fa-github"></i></a>
             </section>
         </section>
     </header>
 
+    <!-- Main -->
+    <main>
+        <!-- Habilidades -->
+        <section class="habilidades" id="habilidades">
+            <article>
+                <h1>Habilidades</h1>
+                <h2>Programación</h2>
+            </article>
 
+            <section class="contenedor-cartas">
+                <article class="girar-tarjeta">
+                    <article class="contenido-carta">
+                        <article class="carta-delante">
+    
+                        </article>
+                        <article class="carta-atras">
+                            1 Año de experiencia programando en java.
+                        </article>
+                    </article>
+                </article>
 
+            </section>
+        </section>
+    </main>
 
 </body>
 
