--- a/index.html
+++ b/index.html
@@ -73,10 +73,54 @@
                 <article class="girar-tarjeta">
                     <article class="contenido-carta">
                         <article class="carta-delante">
-    
+                            <img src="./src/img/Lenguajes/java.png" alt="">
                         </article>
                         <article class="carta-atras">
                             1 Año de experiencia programando en java.
+                        </article>
+                    </article>
+                </article>
+
+            </section>
+        </section>
+
+        <section class="habilidades">
+            <article>
+                <h1>Habilidades</h1>
+                <h2>Diseño Web</h2>
+            </article>
+
+            <section class="contenedor-cartas">
+
+                <article class="girar-tarjeta">
+                    <article class="contenido-carta">
+                        <article class="carta-delante">
+                            <img src="./src/img/Lenguajes/html-5.png" alt="">
+                        </article>
+                        <article class="carta-atras">
+                            1 Año de experiencia programando en HTML.
+                        </article>
+                    </article>
+                </article>
+
+                <article class="girar-tarjeta">
+                    <article class="contenido-carta">
+                        <article class="carta-delante">
+                            <img src="./src/img/Lenguajes/css-3.png" alt="">
+                        </article>
+                        <article class="carta-atras">
+                            1 Año de experiencia programando en CSS.
+                        </article>
+                    </article>
+                </article>
+
+                <article class="girar-tarjeta">
+                    <article class="contenido-carta">
+                        <article class="carta-delante">
+                            <img src="./src/img/Lenguajes/js.png" alt="">
+                        </article>
+                        <article class="carta-atras">
+                            1 Año de experiencia programando en JS.
                         </article>
                     </article>
                 </article>
