--- a/src/en/index.html
+++ b/src/en/index.html
@@ -61,6 +61,76 @@
         </section>
     </header>
 
+    
+    <!-- Main -->
+    <main>
+        <!-- Habilidades -->
+        <section class="habilidades" id="habilidades">
+            <article>
+                <h1>Skills</h1>
+                <h2>Programming</h2>
+            </article>
+
+            <section class="contenedor-cartas">
+                <article class="girar-tarjeta">
+                    <article class="contenido-carta">
+                        <article class="carta-delante">
+                            <img src="../img/Lenguajes/java.png" alt="">
+                        </article>
+                        <article class="carta-atras">
+                            1 year of experience programming in Java.
+                        </article>
+                    </article>
+                </article>
+
+            </section>
+        </section>
+
+        <section class="habilidades">
+            <article>
+                <h1>Skills</h1>
+                <h2>Web design</h2>
+            </article>
+
+            <section class="contenedor-cartas">
+
+                <article class="girar-tarjeta">
+                    <article class="contenido-carta">
+                        <article class="carta-delante">
+                            <img src="../img/Lenguajes/html-5.png" alt="">
+                        </article>
+                        <article class="carta-atras">
+                            1 year of experience programming in HTML.
+                        </article>
+                    </article>
+                </article>
+
+                <article class="girar-tarjeta">
+                    <article class="contenido-carta">
+                        <article class="carta-delante">
+                            <img src="../img/Lenguajes/css-3.png" alt="">
+                        </article>
+                        <article class="carta-atras">
+                            1 year of experience programming in CSS.
+                        </article>
+                    </article>
+                </article>
+
+                <article class="girar-tarjeta">
+                    <article class="contenido-carta">
+                        <article class="carta-delante">
+                            <img src="../img/Lenguajes/js.png" alt="">
+                        </article>
+                        <article class="carta-atras">
+                            1 year of experience programming in JS.
+                        </article>
+                    </article>
+                </article>
+
+            </section>
+        </section>
+    </main>
+
 
 </body>
 
