Proyectos (COmpletado) en (Completado), Y modificaciones para mejorar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <!-- Barra Navegación -->
-    <nav class="menu">
+    <nav class="menu" id="inicio">
 
         <section class="idioma">
             <img class="es" src="./src/img/Banderas/espana.png" alt="">
@@ -37,7 +37,7 @@
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#habilidades">Habilidades</a></li>
-                <li><a href="">Proyectos</a></li>
+                <li><a href="#proyectos">Proyectos</a></li>
                 <li><a href="">Contacto</a></li>
             </ul>
         </section>
@@ -47,7 +47,7 @@
     </nav>
 
     <!-- Inicio -->
-    <header id="inicio">
+    <header class="inicio">
         <section class="informacion">
             <h1>Sergio Trujillo</h1>
             <h3>Programador & Diseñador Web</h3>
@@ -83,7 +83,6 @@
 
             </section>
         </section>
-
         <section class="habilidades">
             <article>
                 <h1>Habilidades</h1>
@@ -122,6 +121,54 @@
                         <article class="carta-atras">
                             1 Año de experiencia programando en JS.
                         </article>
+                    </article>
+                </article>
+            </section>
+        </section>
+
+        <!-- Proyectos -->
+        <section class="proyectos" id="proyectos">
+            <h1>Proyectos</h1>
+            
+            <section class="proyectos-contenedor">
+
+                <article class="proyecto">
+                    <img src="./src/img/imgProyectos/Ej1.jpg" alt="">
+                    <article class="info-proyecto">
+                        <h1>Ejemplo</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, consequuntur.
+                        </p>
+                    </article>
+                </article>
+
+                <article class="proyecto">
+                    <img src="./src/img/imgProyectos/Ej3.jpg" alt="">
+                    <article class="info-proyecto">
+                        <h1>Ejemplo</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, incidunt?
+                        </p>
+                    </article>
+                </article>
+
+                <article class="proyecto">
+                    <img src="./src/img/imgProyectos/Ej4.jpg" alt="">
+                    <article class="info-proyecto">
+                        <h1>Ejemplo</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, illo.
+                        </p>
+                    </article>
+                </article>
+
+                <article class="proyecto">
+                    <img src="./src/img/imgProyectos/Ej2.jpg" alt="">
+                    <article class="info-proyecto">
+                        <h1>Ejemplo</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, voluptatibus!
+                        </p>
                     </article>
                 </article>
 
