--- a/src/en/index.html
+++ b/src/en/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <!-- Barra Navegación -->
-    <nav class="menu">
+    <nav class="menu" id="inicio">
 
         <section class="idioma">
             <img class="es" src="../img/Banderas/espana.png" alt="">
@@ -28,9 +28,9 @@
 
         <section class="opciones">
             <ul>
-                <li><a href="">home</a></li>
-                <li><a href="">skills</a></li>
-                <li><a href="">projects</a></li>
+                <li><a href="#inicio">home</a></li>
+                <li><a href="#habilidades">skills</a></li>
+                <li><a href="#proyectos">projects</a></li>
                 <li><a href="">contact</a></li>
             </ul>
         </section>
@@ -48,7 +48,7 @@
     </nav>
 
     <!-- Inicio -->
-    <header id="inicio">
+    <header class="inicio">
         <section class="informacion">
             <h1>Sergio Trujillo</h1>
             <h3>Programmer & Web Designer</h3>
@@ -126,9 +126,58 @@
                         </article>
                     </article>
                 </article>
+            </section>
+        </section>
+
+        <!-- Proyectos -->
+        <section class="proyectos" id="proyectos">
+            <h1>Projects</h1>
+            
+            <section class="proyectos-contenedor">
+
+                <article class="proyecto">
+                    <img src="../img/imgProyectos/Ej1.jpg" alt="">
+                    <article class="info-proyecto">
+                        <h1>Example</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, consequuntur.
+                        </p>
+                    </article>
+                </article>
+
+                <article class="proyecto">
+                    <img src="../img/imgProyectos/Ej3.jpg" alt="">
+                    <article class="info-proyecto">
+                        <h1>Example</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, incidunt?
+                        </p>
+                    </article>
+                </article>
+
+                <article class="proyecto">
+                    <img src="../img/imgProyectos/Ej4.jpg" alt="">
+                    <article class="info-proyecto">
+                        <h1>Example</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, illo.
+                        </p>
+                    </article>
+                </article>
+
+                <article class="proyecto">
+                    <img src="../img/imgProyectos/Ej2.jpg" alt="">
+                    <article class="info-proyecto">
+                        <h1>Example</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, voluptatibus!
+                        </p>
+                    </article>
+                </article>
 
             </section>
         </section>
+
     </main>
 
 
