contacto(incompleto) en {sin hacer} mejorar paleta de colores contacto

--- a/index.html
+++ b/index.html
@@ -174,8 +174,21 @@
 
             </section>
         </section>
-    </main>
 
+        <!-- Contacto -->
+        <section class="contacto">
+            <h1>Contacto</h1>
+            <article class="formulario">
+                <input type="text" placeholder="Nombre" required>
+                <input type="text" placeholder="Correo de contacto" required>
+                <input type="text" placeholder="Asunto" required>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje" required></textarea>
+
+            </article>
+        </section>
+
+
+    </main>
 </body>
 
 </html>
