Contacto (Completado) en (Completado) he añadido la flechita para subir cuando se baja mucho

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#habilidades">Habilidades</a></li>
                 <li><a href="#proyectos">Proyectos</a></li>
-                <li><a href="">Contacto</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </section>
 
@@ -129,7 +129,7 @@
         <!-- Proyectos -->
         <section class="proyectos" id="proyectos">
             <h1>Proyectos</h1>
-            
+
             <section class="proyectos-contenedor">
 
                 <article class="proyecto">
@@ -176,19 +176,19 @@
         </section>
 
         <!-- Contacto -->
-        <section class="contacto">
+        <section class="contacto" id="contacto">
             <h1>Contacto</h1>
-            <article class="formulario">
+            <form class="formulario">
                 <input type="text" placeholder="Nombre" required>
                 <input type="text" placeholder="Correo de contacto" required>
                 <input type="text" placeholder="Asunto" required>
-                <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje" required></textarea>
-
-            </article>
+                <textarea name="" id="" cols="30" rows="30" placeholder="Mensaje" required></textarea>
+            </form>
         </section>
-
-
     </main>
+
+    <!-- Boton arriba -->
+    <a href="#inicio"><i class="fa-solid fa-chevron-up" id="botonArriba"></i></a>
 </body>
 
 </html>
