--- a/src/en/index.html
+++ b/src/en/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#inicio">home</a></li>
                 <li><a href="#habilidades">skills</a></li>
                 <li><a href="#proyectos">projects</a></li>
-                <li><a href="">contact</a></li>
+                <li><a href="#contacto">contact</a></li>
             </ul>
         </section>
 
@@ -61,7 +61,7 @@
         </section>
     </header>
 
-    
+
     <!-- Main -->
     <main>
         <!-- Habilidades -->
@@ -132,7 +132,7 @@
         <!-- Proyectos -->
         <section class="proyectos" id="proyectos">
             <h1>Projects</h1>
-            
+
             <section class="proyectos-contenedor">
 
                 <article class="proyecto">
@@ -178,9 +178,20 @@
             </section>
         </section>
 
+        <!-- Contacto -->
+        <section class="contacto" id="contacto">
+            <h1>Contact</h1>
+            <form class="formulario">
+                <input type="text" placeholder="Name" required>
+                <input type="text" placeholder="Email" required>
+                <input type="text" placeholder="Topic" required>
+                <textarea name="" id="" cols="30" rows="30" placeholder="Text" required></textarea>
+            </form>
+        </section>
     </main>
 
-
+    <!-- Boton arriba -->
+    <a href="#inicio"><i class="fa-solid fa-chevron-up" id="botonArriba"></i></a>
 </body>
 
 </html>
