Footer (completo) en (completo) bajado el peso de las imagenes

--- a/src/en/index.html
+++ b/src/en/index.html
@@ -190,6 +190,22 @@
         </section>
     </main>
 
+    <!-- Footer -->
+    <footer>
+        <img src="../img/Logo/logo.png" alt="" class="logo-footer">
+        <section class="social-contenedor">
+            <a href="https://twitter.com/DidelfoTron" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.instagram.com/__serg10__xx/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://github.com/DidelfoUwU" target="_blank"><i class="fa-brands fa-github"></i></a>
+        </section>
+        <ul class="footer-menu">
+            <li class="item-footer">Legal</li>
+            <li class="item-footer">Cookies</li>
+            <li class="item-footer">Privacy</li>
+        </ul>
+        <span class="copyright">&copy; 2023, Sergio Trujillo. All rights reserved.</span>
+    </footer>
+
     <!-- Boton arriba -->
     <a href="#inicio"><i class="fa-solid fa-chevron-up" id="botonArriba"></i></a>
 </body>
